@@ -324,22 +324,24 @@ class Sources(GetSources):
             sortedList = [i for i in sortedList if 'HEVC' not in i['info']]
         if control.getBool('general.disablebatch'):
             sortedList = [i for i in sortedList if 'BATCH' not in i['info']]
-        lang = control.getInt("general.source")
-        if lang != 0:
-            langs = [0, 2, 3]
-            sortedList = [i for i in sortedList if i['lang'] != langs[lang]]
+        source = control.getInt("general.source")
+        if source != 0:
+            if source == 1:
+                sortedList = [i for i in sortedList if i['lang'] in [0, 1, 2]]
+            elif source == 2:
+                sortedList = [i for i in sortedList if i['lang'] in [0, 1, 3]]
 
         # Sort Sources
         SORT_METHODS = sort_select.SORT_METHODS
         sort_options = sort_select.sort_options
-        
+
         for x in range(len(SORT_METHODS), 0, -1):
             reverse = sort_options[f'sortmethod.{x}.reverse']
             method = SORT_METHODS[int(sort_options[f'sortmethod.{x}'])]
             # Replace spaces with underscores in the method name
             method = method.replace(' ', '_')
             sortedList = getattr(sort_select, f'sort_by_{method}')(sortedList, not reverse)
-        
+
         return sortedList
 
     def updateProgress(self):
