@@ -122,7 +122,7 @@ class Sources(BrowserBase):
                                 'size': 'NA',
                                 'seeders': 0,
                                 'byte_size': 0,
-                                'info': ['DUB' if lang == 'dub' else 'SUB', edata_name],
+                                'info': edata_name + (' DUB' if lang == 'dub' else ' SUB'),
                                 'lang': 3 if lang == 'dub' else 2,
                                 'channel': 3,
                                 'sub': 1,
@@ -173,7 +173,7 @@ class Sources(BrowserBase):
                                     'size': 'NA',
                                     'seeders': 0,
                                     'byte_size': 0,
-                                    'info': ['DUB' if lang == 'dub' else 'SUB', edata_name],
+                                    'info': edata_name + (' DUB' if lang == 'dub' else ' SUB'),
                                     'lang': 3 if lang == 'dub' else 2,
                                     'channel': 3,
                                     'sub': 1,
