@@ -1,3 +1,8 @@
+Changelog v5.1.43 (2024-01-10):
+- Fanart now utilizes Title Language
+- Info is now more consistent for Embeds
+- Fixed the Source Type Option
+
 Changelog v5.1.42 (2024-01-06):
 - Small Database Fix
 
